Provision with Ansible instead of cloud-init.

--- a/files/Caddyfile.j2
+++ b/files/Caddyfile.j2
@@ -1,11 +1,10 @@
 {
-	email ${email}
-
-	%{~ if tls_staging ~}
+	email {{ email }}
+{% if tls_staging %}
 	acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
-	%{~ endif ~}
+{% endif %}
 }
 
-${host}
+{{ inventory_hostname }}
 
 reverse_proxy localhost:9000
