Use --net=host to enable connecting to SSH tunnel.

--- a/ansible/files/thelounge.service.j2
+++ b/ansible/files/thelounge.service.j2
@@ -17,7 +17,7 @@ ExecStart=docker run \
     --rm \
     --tty \
     --user {{ thelounge_user_result.uid }}:{{ thelounge_user_result.group }}\
-    --publish 9000:9000 \
+    --net=host \
     --volume /var/opt/thelounge:/var/opt/thelounge \
     thelounge/thelounge:4.3.1
 
