Always look for a newer Docker image on service start.

--- a/ansible/files/thelounge.service.j2
+++ b/ansible/files/thelounge.service.j2
@@ -16,6 +16,7 @@ ExecStart=docker run \
     --name thelounge \
     --rm \
     --tty \
+    --pull=always \
     --user {{ thelounge_user_result.uid }}:{{ thelounge_user_result.group }}\
     --net=host \
     --volume /var/opt/thelounge:/var/opt/thelounge \
