Try to work around out-of-memory crashes.
The Lounge keeps crashing on my t4g.nano, apparently because of out-of-memory errors.
This tries to reduce The Lounge's memory consumption by limiting its scrollback,
and enables auto-restart in case it keeps crashing.

--- a/ansible/files/thelounge.service.j2
+++ b/ansible/files/thelounge.service.j2
@@ -22,6 +22,9 @@ ExecStart=docker run \
     --volume /var/opt/thelounge:/var/opt/thelounge \
     thelounge/thelounge:4.4.0
 
+Restart=on-failure
+StartLimitBurst=3
+StartLimitIntervalSec=10
 
 [Install]
 WantedBy=multi-user.target
